# dj-set-curator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: login.py
src/dj_set_curator/: __init__.py  __main__.py  anchor.py  arranger.py  audio_analyzer.py  cli.py  config.py  curator.py  deduplicator.py  energy_heuristics.py  expansion.py  filters.py  genre_resolver.py  mcp_client.py  models.py  playlist_naming.py  sources.py  transition.py
tests/: test_anchor.py  test_curator.py  test_filters.py  test_integration.py
