[project]
name = "dj-set-curator"
version = "0.3.2"
description = "基于锚点歌曲的智能 DJ 选曲工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
]

[project.scripts]
dj-curator = "dj_set_curator.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dj_set_curator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
